(next release) on (date of next release)
26.07.00 VZ: encode 8bit characters in the header of outgoing messages too
25.07.00 VZ: support for setting charset for the outgoing messages
21.07.00 VZ: completely rewrote subfoldrs dialog which is now *much* faster
19.07.00 VZ: it is possible to specify several address which should be replaced
             with the destination address when the corresponding option is on
18.07.00 VZ: fixed serious bug in handling options changes, they are now
             handled correctly and [Apply] and [Cancel] behave as expected
             added the identity choice to the toolbar (advanced mode only)
             the background colour of the folder tree can now be changed
08.07.00 KB: Find now highlights text in viewer, MFilter reads/writes filter
             code and not just dialog settings
08.07.00 VZ: added an option to prepend sender initials to the reply prefix
06.07.00 VS: quoted text highlighting in the message viewer
06.07.00 VZ: almost complete rewrite of (user visible aspects of) filter code,
             there are now several dialogs for filter editing,
             also added "Quick filter" dialog
05.07.00 VZ: made sending a test message during installation optional
04.07.00 VZ: added "reverse order" checkboxes to sort dialog, made possible to
             reverse sort by arrival order
04.07.00 KB: wxOptionsDlg now automatically stores all Field_Password entries
             encrypted, SMTP/NNTP server passwords are now encrypted in config
             keep-open flag now only enforced for Outbox
30.06.00 VZ: made it possible to attach several files at once
27.06.00 KB: added DeleteDuplicates functionality, fixed (?) folderview selection behaviour
             for auto-show-first and move focus on after delete/undelete/etc
19.06.00 VZ: messages from oneself are (optionally) marked as such
15.06.00 VZ: added "Message|Language" menu for manual language selection