@@ -22,7 +22,7 @@ enum MPersMsgBox
    M_MSGBOX_ASK_SPECIFY_DIR,
 #ifdef OS_UNIX
    M_MSGBOX_ASK_RUNASROOT,
-#endif   
+#endif
    M_MSGBOX_SEND_OUTBOX_ON_EXIT,
    M_MSGBOX_ABANDON_CRITICAL,
    M_MSGBOX_GO_ONLINE_TO_SEND_OUTBOX,
@@ -70,6 +70,7 @@ enum MPersMsgBox
    M_MSGBOX_RULESMISMATCHWARN2,
 #endif
    M_MSGBOX_FILTER_REPLACE,
+   M_MSGBOX_ADD_ALL_SUBFOLDERS,
    M_MSGBOX_MAX
 };
 
